# carapace

./: .gitignore  .gitleaks.toml  .hadolint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  REVIEW_POLICY.yaml  TODO.md  build.rs  config.example.json5  deny.toml
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols.pkl  raw_document_symbols.pkl
docs/: README.md  architecture.md  channels.md  connector-security.md  feature-evidence.yaml  feature-status.yaml  gap-analysis.md  getting-started.md  plugins.md  security-comparison.md  security.md  skills-system.md
docs/protocol/: config.md  credentials.md  http.md  websocket.md
docs/refactor/: compatibility-checklist.md  critical-path.md  implementation-plan.md  rust-migration.md
examples/plugins/: example_plugin.rs  go_plugin.go  hello_plugin.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_jsonrpc_dispatch.rs  fuzz_redact_patterns.rs  fuzz_secret_format_parsing.rs  fuzz_ssrf_url_validation.rs
src/: lib.rs  main.rs
src/agent/: anthropic.rs  bedrock.rs  builtin_tools.rs  channel_tools.rs  classifier.rs  context.rs  executor.rs  exfiltration.rs  factory.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  output_sanitizer.rs  provider.rs  sandbox.rs  session.rs  tool_policy.rs  venice.rs
src/agent/prompt_guard/: config_lint.rs  mod.rs  postflight.rs  preflight.rs  tagging.rs
src/ai/: mod.rs  types.rs
src/ai/providers/: anthropic.rs  mod.rs  openai.rs
src/auth/: mod.rs  profiles.rs
src/autoreply/: config.rs  engine.rs  mod.rs
src/browser/: cdp.rs  mod.rs  page.rs
src/channels/: config.rs  discord.rs  discord_gateway.rs  google_chat.rs  googlechat.rs  imessage.rs  inbound.rs  line.rs  matrix.rs  mattermost.rs  media_fetch.rs  mod.rs  signal.rs  skype.rs  slack.rs  slack_inbound.rs  teams.rs  telegram.rs  telegram_inbound.rs  trait.rs  voice.rs  webchat.rs  webhook.rs  whatsapp.rs  zalo.rs
src/cli/: backup_crypto.rs  mod.rs
src/config/: defaults.rs  encryption.rs  mod.rs  schema.rs  secrets.rs  types.rs  watcher.rs
src/credentials/: linux.rs  macos.rs  migration.rs  mod.rs  windows.rs
src/cron/: executor.rs  mod.rs
src/dashboard/: mod.rs
src/devices/: macos.rs  mod.rs
src/discovery/: mod.rs
src/exec/: mod.rs
src/flows/: config.rs  engine.rs  integrate.rs  mod.rs
src/gateway/: mod.rs
src/hooks/: auth.rs  handler.rs  mod.rs
src/js/: console_shim.js
src/links/: mod.rs
src/logging/: audit.rs  buffer.rs  mod.rs  redact.rs
src/media/: analysis.rs  fetch.rs  mod.rs  store.rs
src/memory/: coordinator.rs  embeddings.rs  indexer.rs  mod.rs  store.rs
src/messages/: delivery.rs  mod.rs  outbound.rs
src/metrics/: mod.rs
src/migrations/: mod.rs
src/nodes/: mod.rs
src/plugins/: bindings.rs  capabilities.rs  hook_utils.rs  host.rs  hotreload.rs  loader.rs  mod.rs  runtime.rs  sandbox.rs  signature.rs  tools.rs  typescript.rs
src/plugins/caps/: anthropic.rs  channel.rs  github.rs  jira.rs  linear.rs  mod.rs  notion.rs  openai.rs  postgres.rs  redis.rs  sendgrid.rs  service.rs  stripe.rs  teams.rs  tool.rs  twilio.rs  webhook.rs
src/polls/: config.rs  engine.rs  mod.rs
src/providers/: mod.rs  web_search.rs
src/security/: logging.rs  mod.rs
src/server/: bind.rs  connect_info.rs  control.rs  csrf.rs  headers.rs  http.rs  metrics.rs  mod.rs  openai.rs  ratelimit.rs  resource_monitor.rs  startup.rs  tls.rs  ws.rs
src/server/ws/: golden_tests.rs  limits.rs  mod.rs  tests.rs
src/server/ws/handlers/: channels.rs  config.rs  cron.rs  exec.rs  logs.rs  mod.rs  node.rs  sessions.rs  skills.rs  system.rs  talk.rs  tts.rs  update.rs  usage.rs  voicewake.rs  wizard.rs
src/sessions/: integrity.rs  mod.rs  retention.rs  store.rs
src/skills/: import.rs  install.rs  manifest.rs  mod.rs  registry.rs
src/skills/manifest/: carapace_skill.rs  claude_code.rs  github_action.rs
src/tailscale/: mod.rs
src/tls/: ca.rs  mod.rs
src/tools/: builtins.rs  executor.rs  mod.rs  registry.rs  schema.rs  types.rs
src/tools/builtins/: bash.rs  browser.rs  mod.rs  patch.rs  screen.rs  web.rs
src/tracing/: mod.rs
src/tts/: config.rs  mod.rs  providers.rs
src/tui/: mod.rs
src/ui/: dashboard.rs  mod.rs  tui.rs
src/usage/: mod.rs
src/voice/: call.rs  config.rs  mod.rs  twilio.rs
tests/: golden_test.rs  http_endpoints_test.rs  ssrf_test.rs
tests/golden/http/: a2ui.json  channel-webhooks.json  connect.json  control-ui.json  hooks-agent.json  hooks-mappings.json  hooks-wake.json  openai-chat-completions.json  openresponses.json  tools-invoke.json
tests/golden/ws/: errors.json  events.json  handshake.json  messages.json
wit/: plugin.wit
(+20 files in other folders)
