[package]
name = "carapace"
version = "0.1.0"
edition = "2021"
description = "A secure, stable Rust alternative to moltbot"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "signal", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json", "blocking", "multipart"], default-features = false }
hickory-resolver = "0.24"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
regex = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
keyring = "2"
wasmtime = { version = "18", features = ["component-model"] }
thiserror = "1"
parking_lot = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }
futures-util = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
getrandom = "0.2"
hex = "0.4"
sha2 = "0.10"
serde_yaml = "0.9"
glob = "0.3"
tempfile = "3"
quickjs-wasm-sys = "1.3"

# Database drivers
postgres = "0.19"
redis = "0.25"

clap = { version = "4", features = ["derive"] }

# Leptos web framework
leptos = "0.8"
leptos_axum = "0.8"
leptos_router = "0.8"
tower = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
keychain-tests = []
secret-service-tests = []
macos = []

[lib]
name = "carapace"
path = "src/lib.rs"

[[bin]]
name = "carapace"
path = "src/main.rs"
test = false
